582864 update calls to new Long to Long.valueOf