@@ -73,7 +73,7 @@ public class ApplicationContextConfigurationTest {
 		EntryLookupControllingMockBundle aBundle = new EntryLookupControllingMockBundle(null);
 		aBundle.setResultsToReturnOnNextCallToFindEntries(META_INF_SPRING_CONTENT);
 		ApplicationContextConfiguration config = new ApplicationContextConfiguration(aBundle);
-		assertEquals("bundle should timeout in five minutes", new Long(5 * 60 * 1000), new Long(config.getTimeout()));
+		assertEquals("bundle should timeout in five minutes", Long.valueOf(5 * 60 * 1000), Long.valueOf(config.getTimeout()));
 	}
 
 	@Test
@@ -84,7 +84,7 @@ public class ApplicationContextConfigurationTest {
 		aBundle.setResultsToReturnOnNextCallToFindEntries(META_INF_SPRING_CONTENT);
 		ApplicationContextConfiguration config = new ApplicationContextConfiguration(aBundle);
 		assertTrue("bundle should be Spring powered", config.isSpringPoweredBundle());
-		assertEquals("bundle should timeout in 5 s", new Long(5 * 1000), new Long(config.getTimeout()));
+		assertEquals("bundle should timeout in 5 s", Long.valueOf(5 * 1000), Long.valueOf(config.getTimeout()));
 	}
 
 	@Test
@@ -96,7 +96,7 @@ public class ApplicationContextConfigurationTest {
 		aBundle.setResultsToReturnOnNextCallToFindEntries(META_INF_SPRING_CONTENT);
 		ApplicationContextConfiguration config = new ApplicationContextConfiguration(aBundle);
 		assertTrue("bundle should be Spring powered", config.isSpringPoweredBundle());
-		assertEquals("bundle should timeout -2 (indicates forever)", new Long(-2), new Long(config.getTimeout()));
+		assertEquals("bundle should timeout -2 (indicates forever)", Long.valueOf(-2), Long.valueOf(config.getTimeout()));
 	}
 
 	@Test
